fix: mudança no z-index para que o menu fique na frente de todo o resto

--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,7 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     transform: translateX(-100%);
     transition: transform 0.3s ease;
-    z-index: 1000;
+    z-index: 2000;
     display: flex;
     flex-direction: column;
     padding: 20px;
